--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Again, it was time to trust the process and remember ALEI is //all about the pro
 I thought I&#39;d share my journey with you and ask you to [[come along for the ride.]]</tw-passagedata><tw-passagedata pid="4" name="Show result" tags="" position="900,600" size="100,100">(text-size: 4)[Putting it Together]
 
 (text-size: 1)+ (text-colour: purple) [Your first philosophy is: ]
-//Leadership involves $phil1, and $phil2, others to $phil3 meaningfully to benefit the team or Algonquin community.//
+//Leadership involves $phil1 and $phil2 others to $phil3 meaningfully to benefit the team or Algonquin community.//
 
 (text-size: 1)+ (text-colour: purple)[Your second philosophy is: ]
 //Leadership is the art of $next1 to $next2//
